libneubot.py


def NeubotProtocol_construct(poller, slot_connect, slot_ssl, slot_data, 
      slot_flush, slot_eof, slot_error, opaque):
    ret = LIBNEUBOT.NeubotProtocol_construct(poller, slot_connect, 
      slot_ssl, slot_data, slot_flush, slot_eof, slot_error, opaque)
    if not ret:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotProtocol_get_poller.restype = ctypes.c_void_p
LIBNEUBOT.NeubotProtocol_get_poller.argtypes = (
    ctypes.c_void_p,
)

def NeubotProtocol_get_poller(handle):
    ret = LIBNEUBOT.NeubotProtocol_get_poller(handle)
    if not ret:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotProtocol_destruct.argtypes = (
    ctypes.c_void_p,
)

def NeubotProtocol_destruct(handle):
    LIBNEUBOT.NeubotProtocol_destruct(handle)

#
# NeubotStringVector API:
#

LIBNEUBOT.NeubotStringVector_construct.restype = ctypes.c_void_p
LIBNEUBOT.NeubotStringVector_construct.argtypes = (
    ctypes.c_void_p,
    ctypes.c_size_t,
)

def NeubotStringVector_construct(poller, count):
    ret = LIBNEUBOT.NeubotStringVector_construct(poller, count)
    if not ret:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotStringVector_append.restype = ctypes.c_int
LIBNEUBOT.NeubotStringVector_append.argtypes = (
    ctypes.c_void_p,
    ctypes.c_char_p,
)

def NeubotStringVector_append(handle, str):
    ret = LIBNEUBOT.NeubotStringVector_append(handle, str)
    if ret != 0:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotStringVector_get_poller.restype = ctypes.c_void_p
LIBNEUBOT.NeubotStringVector_get_poller.argtypes = (
    ctypes.c_void_p,
)

def NeubotStringVector_get_poller(handle):
    ret = LIBNEUBOT.NeubotStringVector_get_poller(handle)
    if not ret:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotStringVector_get_next.restype = ctypes.c_char_p
LIBNEUBOT.NeubotStringVector_get_next.argtypes = (
    ctypes.c_void_p,
)

def NeubotStringVector_get_next(handle):
    ret = LIBNEUBOT.NeubotStringVector_get_next(handle)
    if not ret:
        raise RuntimeError('LibNeubot error')
    return ret

LIBNEUBOT.NeubotStringVector_destruct.argtypes = (
    ctypes.c_void_p,
)

def NeubotStringVector_destruct(handle):
    LIBNEUBOT.NeubotStringVector_destruct(handle)

class NeubotHookClosure(object):
    def __init__(self):
        self.opaque = None
        self.functions = {}


#
# NeubotConnection wrapper:
#

class Connection(object):

    def __init__(self, proto, filenum):
        # We cannot destroy until the object is complete
        self._can_destroy = False
        self._context = LIBNEUBOT.NeubotConnection_attach(proto._context,
          filenum)
        if not self._context:
            raise RuntimeError('out of memory')
        # From now on we can destroy this object
        self._can_destroy = True
        LIBNEUBOT_OBJECTS.add(self)

    def __init__(self, proto, family, address, port):
        # We cannot destroy until the object is complete
        self._can_destroy = False
        self._context = LIBNEUBOT.NeubotConnection_connect(proto._context,
          family, address, port)
        if not self._context:
            raise RuntimeError('out of memory')
        # From now on we can destroy this object
        self._can_destroy = True
        LIBNEUBOT_OBJECTS.add(self)

    def get_protocol(self):
        return LIBNEUBOT.NeubotConnection_get_protocol(self._context)

    def set_timeout(self, timeo):
        retval = LIBNEUBOT.NeubotConnection_set_timeout(self._context, timeo)
        if retval != 0:
            raise RuntimeError('set_timeout failed')
        return retval

    def clear_timeout(self):
        retval = LIBNEUBOT.NeubotConnection_clear_timeout(self._context)
        if retval != 0:
            raise RuntimeError('clear_timeout failed')
        return retval

    def start_tls(self, server_side):
        retval = LIBNEUBOT.NeubotConnection_start_tls(self._context,
          server_side)
        if retval != 0:
            raise RuntimeError('start_tls failed')
        return retval

    def read(self, base, count):
        return LIBNEUBOT.NeubotConnection_read(self._context, base, count)

    def readline(self, base, count):
        return LIBNEUBOT.NeubotConnection_readline(self._context, base, count)

    def readn(self, base, count):
        return LIBNEUBOT.NeubotConnection_readn(self._context, base, count)

    def discardn(self, count):
        return LIBNEUBOT.NeubotConnection_discardn(self._context, count)

    def write(self, base, count):
        retval = LIBNEUBOT.NeubotConnection_write(self._context, base, count)
        if retval != 0:
            raise RuntimeError('write failed')
        return retval

    def puts(self, base):
        retval = LIBNEUBOT.NeubotConnection_puts(self._context, base)
        if retval != 0:
            raise RuntimeError('puts failed')
        return retval

    def read_into_(self, evdest):
        retval = LIBNEUBOT.NeubotConnection_read_into_(self._context,
          evdest._context)
        if retval != 0:
            raise RuntimeError('read_into_ failed')
        return retval

    def write_from_(self, evsource):
        retval = LIBNEUBOT.NeubotConnection_write_from_(self._context,
          evsource._context)
        if retval != 0:
            raise RuntimeError('write_from_ failed')
        return retval

    def close(self):
        if not self._can_destroy:
            return
        # Idempotent destructor for safety
        self._can_destroy = False
        LIBNEUBOT_OBJECTS.remove(self)
        LIBNEUBOT.NeubotConnection_close(self._context)

#
# NeubotEchoServer wrapper:
#

class EchoServer(EchoServerBase):

    def __init__(self, poller, use_ipv6, address, port):
        EchoServerBase.__init__(self)
        self.context_ = LIBNEUBOT.NeubotEchoServer_construct(poller, use_ipv6,
          address, port)
        if not self.context_:
            DIE(1)
        _ctypes.Py_INCREF(self)



class Pollable(PollableBase):

    def handle_read(self):
        pass

    def handle_write(self):
        pass

    def handle_error(self):
        pass

    def __init__(self, poller):
        PollableBase.__init__(self)
        self.context_ = LIBNEUBOT.NeubotPollable_construct(poller,
          NEUBOTPOLLABLE_HANDLE_READ_SLOT_VO,
          NEUBOTPOLLABLE_HANDLE_WRITE_SLOT_VO,
          NEUBOTPOLLABLE_HANDLE_ERROR_SLOT_VO, self)
        if not self.context_:
            DIE(1)
        _ctypes.Py_INCREF(self)

    def attach(self, filenum):
        return LIBNEUBOT.NeubotPollable_attach(self, filenum)

    def detach(self):
        LIBNEUBOT.NeubotPollable_detach(self)

    def get_fileno(self):
        return LIBNEUBOT.NeubotPollable_get_fileno(self)

    def set_readable(self):
        return LIBNEUBOT.NeubotPollable_set_readable(self)

    def unset_readable(self):
        return LIBNEUBOT.NeubotPollable_unset_readable(self)

    def set_writable(self):
        return LIBNEUBOT.NeubotPollable_set_writable(self)

    def unset_writable(self):
        return LIBNEUBOT.NeubotPollable_unset_writable(self)

    def set_timeout(self, delta):
        LIBNEUBOT.NeubotPollable_set_timeout(self, delta)

    def clear_timeout(self):
        LIBNEUBOT.NeubotPollable_clear_timeout(self)

    def close(self):
        if not self.context_:
            return
        _ctypes.Py_DECREF(self)
        LIBNEUBOT.NeubotPollable_close(self)
        self.context_ = None



class Poller(PollerBase):

    def __init__(self):
        PollerBase.__init__(self)
        self.context_ = LIBNEUBOT.NeubotPoller_construct()
        if not self.context_:
            DIE(1)
        _ctypes.Py_INCREF(self)

    def sched(self, delta, callback, opaque):

        closure = NeubotHookClosure()
        closure.functions['callback'] = callback
        closure.opaque = opaque
        _ctypes.Py_INCREF(closure)

        return LIBNEUBOT.NeubotPoller_sched(self, delta,
          NEUBOTPOLLER_SCHED_CALLBACK_HOOK_VO, closure)

    def defer_read(self, fileno, handle_ok, handle_timeout, opaque, timeout):

        closure = NeubotHookClosure()
        closure.functions['handle_ok'] = handle_ok
        closure.functions['handle_timeout'] = handle_timeout
        closure.opaque = opaque
        _ctypes.Py_INCREF(closure)

        return LIBNEUBOT.NeubotPoller_defer_read(self, fileno,
          NEUBOTPOLLER_DEFER_READ_HANDLE_OK_HOOK_VO,
          NEUBOTPOLLER_DEFER_READ_HANDLE_TIMEOUT_HOOK_VO, closure, timeout)

    def defer_write(self, fileno, handle_ok, handle_timeout, opaque,
          timeout):

        closure = NeubotHookClosure()
        closure.functions['handle_ok'] = handle_ok
        closure.functions['handle_timeout'] = handle_timeout
        closure.opaque = opaque
        _ctypes.Py_INCREF(closure)

        return LIBNEUBOT.NeubotPoller_defer_write(self, fileno,
          NEUBOTPOLLER_DEFER_WRITE_HANDLE_OK_HOOK_VO,
          NEUBOTPOLLER_DEFER_WRITE_HANDLE_TIMEOUT_HOOK_VO, closure, timeout)

    def resolve(self, family, name, callback, opaque):

        closure = NeubotHookClosure()
        closure.functions['callback'] = callback
        closure.opaque = opaque
        _ctypes.Py_INCREF(closure)

        return LIBNEUBOT.NeubotPoller_resolve(self, family, name,
          NEUBOTPOLLER_RESOLVE_CALLBACK_HOOK_VOS, closure)

    def loop(self):
        LIBNEUBOT.NeubotPoller_loop(self)

    def break_loop(self):
        LIBNEUBOT.NeubotPoller_break_loop(self)

#
# NeubotProtocol wrapper:
#

class Protocol(object):

    #
    # <Slots>
    #

    def slot_connect(self):
        pass

    @staticmethod
    def _slot_connect_(opaque):
        # pylint: disable = W0702
        try:
            opaque.slot_connect()
        except:
            logging.warning('Exception', exc_info=1)
            opaque.destruct()
        # pylint: enable = W0702

    def slot_ssl(self):
        pass

    @staticmethod
    def _slot_ssl_(opaque):
        # pylint: disable = W0702
        try:
            opaque.slot_ssl()
        except:
            logging.warning('Exception', exc_info=1)
            opaque.destruct()
        # pylint: enable = W0702

    def slot_data(self):
        pass

    @staticmethod
    def _slot_data_(opaque):
        # pylint: disable = W0702
        try:
            opaque.slot_data()
        except:
            logging.warning('Exception', exc_info=1)
            opaque.destruct()
        # pylint: enable = W0702

    def slot_flush(self):
        pass

    @staticmethod
    def _slot_flush_(opaque):
        # pylint: disable = W0702
        try:
            opaque.slot_flush()
        except:
            logging.warning('Exception', exc_info=1)
            opaque.destruct()
        # pylint: enable = W0702

    def slot_eof(self):
        pass

    @staticmethod
    def _slot_eof_(opaque):
        # pylint: disable = W0702
        try:
            opaque.slot_eof()
        except:
            logging.warning('Exception', exc_info=1)
            opaque.destruct()
        # pylint: enable = W0702

    def slot_error(self):
        pass

    @staticmethod
    def _slot_error_(opaque):
        # pylint: disable = W0702
        try:
            opaque.slot_error()
        except:
            logging.warning('Exception', exc_info=1)
            opaque.destruct()
        # pylint: enable = W0702

    #
    # </Slots>
    #
